--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="add_transaction">Add Transaction</string>
     <string name="description">Description</string>
     <string name="amount">Amount</string>
+    <string name="sign_in">Sign In</string>
+    <string name="forgot_password">Forgot Password?</string>
 </resources>
 
